--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,6 +2,6 @@
 
 <div class="container" style="margin-top: 140px;">
 
-    <app-shop></app-shop>
+    <router-outlet></router-outlet>
     
 </div>
