--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,7 +1,7 @@
 <div class="card h-100 shadow-sm">
-    <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid bg-light">
+    <img src="{{product.pictureUrl}}" routerLink="/shop/{{product.id}}" alt="{{product.name}}" class="img-fluid bg-light logo">
     <div class="card-body d-flex flex-column">
-        <a href="#">
+        <a routerLink="/shop/{{product.id}}" >
             <h6 class="text-uppercase">
                 {{product.name}}
             </h6>
@@ -10,7 +10,7 @@
 
         <div class="btn-group mt-auto">
           <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-          <button type="button" class="btn btn-outline-secondary">View</button>
+          <button type="button" routerLink="/shop/{{product.id}}"  class="btn btn-outline-secondary">View</button>
         </div>
         <small class="text-muted">9 mins</small>
     </div>
