--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,16 +1,16 @@
-<div class="container">
+<div class="container mt-2">
     <div class="row">
         <section class="col-3">
-            
-            <h5 class="text-warning ml-3">Sort</h5>
-            <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
+            <ng-container *ngIf="types && brands">
+            <h5 class="ml-3 mt-4 mb-4" style="color: palevioletred;">Sort</h5>
+            <select class="custom-select mb-4" (change)="onSortSelected($event.target.value)">
                 <option *ngFor="let sort of sortOptions" [value]="sort.value">
                     {{sort.name}}
                 </option>
             </select>
 
             
-            <h5 class="text-warning ml-3">Brands</h5>
+            <h5 class="ml-3" style="color: palevioletred;">Brands</h5>
             <ul class="list-group my-3">
                 <li class="list-group-item" 
                     *ngFor="let brand of brands"
@@ -20,7 +20,7 @@
 
                 >{{brand.name}}</li>
               </ul>
-              <h5 class="text-warning ml-3">Types</h5>
+              <h5 class="ml-3" style="color: palevioletred;">Types</h5>
               <ul class="list-group my-3">
                 <li class="list-group-item" 
                 *ngFor="let type of types"
@@ -29,6 +29,7 @@
                 (click)="onTypeSelected(type.id)"
                 >{{type.name}}</li>
               </ul>
+            </ng-container>
         </section>
         <section class="col-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
@@ -38,7 +39,7 @@
                     [pageNumber] = "this.shopParams.pageNumber"
 
                     ></app-paging-header>
-                <div class="form-inline mt-2">
+                <div class="form-inline mt-2" *ngIf="products">
                     <input (keyup.enter)="onSearch()" class="form-control mr-2" #search style="width: 300px " placeholder="Search" type="text">
                     <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
                     <button (click)="onReset()" class="btn btn-outline-success ml-2 my-2">Reset</button>
